app/styles/main.scss
@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700;800;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700&display=swap");

$grid-breakpoints: (
  xs: 0,
  sm: 576px,
  md: 768px,
  lg: 992px,
  xl: 1200px,
  xxl: 1400px,
);

$container-max-widths: (
  sm: 540px,
  md: 720px,
  lg: 960px,
  xl: 1140px,
  xxl: 1320px,
);

body {
  font-family: "Prompt", sans-serif;
}

.header {
  background-color: rgb(255, 255, 255);

  // .header__container

  &__container {
    max-width: 1920px;
    padding-left: 130px;
    padding-top: 68px;
    padding-bottom: 56px;
    box-sizing: border-box;
    height: 150px;
  }

  &__content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  &__item {
    display: flex;
    padding-right: 181px;
  }

  &__nav {
    display: flex;
    padding-right: 114px;
    gap: 60px;
    color: rgb(90, 90, 90);
    font-family: Prompt;
    font-size: 18px;
    font-weight: 400;
    line-height: 27px;
    letter-spacing: 0%;
    text-align: left;
  }

  &__nav-item {
    display: flex;
    align-items: center;
    justify-content: center;
    text-transform: uppercase;
  }

  .nav-link-home {
    color: black;
    text-decoration: none;
    font-weight: 400;
    display: flex;
    align-items: center;
    width: 63px;
    height: 27px;
  }

  .nav-link {
    text-decoration: none;
    font-weight: 400;
    color: rgb(90, 90, 90);
    display: flex;
    align-items: center;
    width: 63px;
    height: 27px;
  }

  .nav-link-contact {
    margin-left: 60px;
  }

  &__button {
    display: flex;
    flex-direction: row;
    gap: 5px;
  }

  &__button-login {
    border: 1px solid rgb(29, 175, 207);
    border-radius: 50px;
    color: rgb(29, 175, 207);
    background-color: white;
    width: 162px;
    height: 59px;
    text-transform: uppercase;
  }

  &__button-sign-up {
    border: 2px solid rgb(29, 175, 207);
    border-radius: 50px;
    background: rgb(29, 175, 207);
    text-transform: uppercase;
    color: white;
    width: 162px;
    height: 59px;
  }
}

.main {
}

.service-clean {
  background-image: url(../images/background__head.png);
  // background-color: rgb(56, 71, 83);
  background-repeat: no-repeat;
  background-size: cover;
  width: 1900px;
  height: 970px;

  .service__content {
    padding-top: 248px;
  }

  .service-head__header {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding: 0px;
    background: linear-gradient(90deg, rgb(255, 255, 255), rgb(207, 136, 29));
    font-family: "Work Sans";
    font-weight: 400;
    font-size: 18px;
    font-weight: 400;
    line-height: 21px;
    letter-spacing: 20%;
    text-align: center;
    text-transform: uppercase;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  .service-head__title {
    position: static;
    width: 1106px;;
    height: 245px;
    color: rgb(255, 255, 255);
    font-family: "Prompt";
    font-size: 72px;
    font-weight: 700;
    line-height: 120%;
    text-transform: uppercase;
  }

  .service__titles {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    flex-direction: column;
  }

  .service-button {
    width: 162px;
    height: 59px;
    padding: 16px 24px 16px 24px;
    border: 2px solid rgb(29, 175, 207);
    border-radius: 50px;
    background: rgb(29, 175, 207);
    color: rgb(255, 255, 255);
    font-family: Prompt;
    font-size: 18px;
    font-weight: 400;
    line-height: 27px;
    text-transform: uppercase;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    display: flex;
  }

  .service-button__box {
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 45px;
  }
}

.cleaners {
  background-color: white;

  &__container {
    padding-top: 150px;
    padding-left: 166px;
    padding-right: 180px;
  }

  &__content {
    display: flex;
    flex-direction: row;
  }
}

